<resources>
	
    <string name="title">Friend Locator</string>
    <string name="text_powitanie">Friend Locator</string>
    <string name="hint_login">login</string>
    <string name="hint_haslo">hasło</string>
    <string name="checkBox_zapamietajDane">Zapamietaj Login i Hasło</string>
    <string name="button_zapomnialemDanych">Zapomniałem loginu lub hasła</string>
    <string name="button_zarejestruj">Zarejestruj się</string>
    <string name="button_zaloguj">Zaloguj się</string>
    <string name="app_name">Friend Locator</string>
    <item name="Haslo" type="id">Haslo</item>
    <string name="registerLabel">Rejestracja</string>
    <string name="titleRegistry">Wypełnij formularz</string>
    <item name="HasloPowtorz" type="id">HalsloPowtorz</item>
    <string name="passwordRepeat">powtórz hasło</string>
    <string name="hint_email">email</string>
    <string name="button_wyslij">wyslij</string>
    <string name="naglowek_okno_rejestracja">Aby się zarejestrować prosze wypełnić poniższe pola</string>
    <string name="naglowek_okno_zapomnialem_danych">Wpisz swój login oraz email, aby otrzymać hasło</string>
    <string name="menu">Menu</string>
    <string name="button_powrot">Powrót</string>
    <string name="button_ustawienia">Ustawienia</string>
    <string name="button_about">About</string>
    <string name="button_znajomi">Znajomi</string>
    <string name="button_wyloguj">Wyloguj się</string>
    <string name="button_wyjdz">Wyjdź</string>
    <string name="button_pomoc">Pomoc</string>
    <string name="button_autorzy">Autorzy</string>
    <string name="button_przelacz_widok">Przełącz widok</string>
    <string name="text_pomoc">Pomoc</string>
    <string name="button_zaproszenia">Zaproszenia</string>
    <string name="button_zmien_widok">Zmień widok</string>
    <string name="button_dodaj">Dodaj</string>
    <string name="button_zmien_haslo">Zmień hasło</string>
    <string name="text_stare_haslo">Stare hasło</string>
    <string name="text_nowe_haslo">Nowe hasło</string>
    <string name="button_zmien">Zamień</string>
    <string name="button_zmien_email">Zmień email</string>
    <string name="button_wyslij_email">Wyślij do nas maila</string>
    <string name="text_tresc">Treść</string>
    <string name="text_tytul">Tytuł</string>
    <string name="button_center">Center</string>
    <string name="text_jakzmienichaslo">Jak zmienić hasło</string>
    <string name="text_jakzmienicmaila">Jak zmienić email</string>
    <string name="text_zmianasynk">Podaj nowy czas synchronizacj(sekundy)</string>
    <string name="text_10s">10s</string>
    <string name="text_20s">20s</string>
    <string name="text_30s">30s</string>
    <string name="text_zatwierdź">Zatwierdź zmiane czasu</string>
    <string name="hint_loginhaslo">Login lub Email</string>
    <string name="text_wyszapro">Wyślij zaproszenie</string>
    <string name="autor1">Andrzej Plutecki</string>
    <string name="autor2">Leszek Foltman</string>
    <string name="autor3">Patryk Fuhrman</string>
    <string name="text_zmem">Aby zmienić email należy z menu głównego wejść w menu ustawień, następnie nacisnąć przycisk zmień Email. W wyświetlonym oknu należy podać swój stary adres Email oraz nowy i zatwierdzić zmiane naciskając przycisk wyślij.</string>
    <string name="text_h">Aby zmienić hasło należy z menu głównego wejść w menu ustawień, następnie nacisnąć przycisk zmień Hasło. W wyświetlonym oknu należy podać swój stare hasło oraz nowe i zatwierdzić zmiane naciskając przycisk wyślij.</string>

</resources>