<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:orientation="vertical" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center" >

    <Button
        android:id="@+id/button_znajomi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="znajomi"
        android:layout_below="@+id/textView1"
        android:text="@string/button_znajomi" />
    <Button
        android:id="@+id/button_autorzy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="autorzy"
        android:layout_below="@id/button_zaproszenia"
        android:text="@string/button_autorzy" />

    <Button
        android:id="@+id/button_zaproszenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_znajomi"
        android:onClick="zaproszenia"
        android:text="@string/button_zaproszenia" />

    <Button
        android:id="@+id/button_ustawienia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ustawienia"
        android:layout_below="@id/button_autorzy"
        android:text="@string/button_ustawienia" />

    <Button
        android:id="@+id/button_pomoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="pomoc"
        android:layout_below="@id/button_ustawienia"
        android:text="@string/button_pomoc" />
    
    <Button
        android:id="@+id/button_powrot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="powrot"
        android:layout_below="@id/button_pomoc"
        android:text="@string/button_powrot" />
    
    <Button
        android:id="@+id/button_wyloguj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_powrot"
        android:onClick="wyloguj"
        android:text="@string/button_wyloguj" />

     <Button
         android:id="@+id/button_wyjdz"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:layout_below="@id/button_wyloguj"
         android:text="@string/button_wyjdz" />

     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="34dp"
         android:text="@string/menu"
         android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>
</ScrollView>