<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    android:orientation="vertical" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:text="@string/text_powitanie"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_login" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/text_haslo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/hint_haslo"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox_zapamietajDane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="true"
        android:text="@string/checkBox_zapamietajDane" />

    <Button
        android:id="@+id/button_zaloguj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:minHeight="50dp"
        android:minWidth="270dp"
        android:onClick="zaloguj"
        android:text="@string/button_zaloguj" />

    <Button
        android:id="@+id/button_zarejestruj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="50dp"
        android:minWidth="270dp"
        android:onClick="zarejestruj"
        android:text="@string/button_zarejestruj" />

    <Button
        android:id="@+id/button_zapomnialem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="50dp"
        android:minWidth="270dp"
        android:onClick="zapomnialem"
        android:text="@string/button_zapomnialemDanych" />

</LinearLayout>
</ScrollView>