<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <TextView
         android:id="@+id/text_zmien_haslo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="34dp"
         android:text="@string/button_zmien_email"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_stare_haslo"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <EditText
         android:id="@+id/wpisz_stare_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/text_nowe_haslo"
         android:textAppearance="?android:attr/textAppearanceMedium" />

     <EditText
         android:id="@+id/wpisz_nowe_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textEmailAddress" >

         <requestFocus />
     </EditText>

     <Button
         android:id="@+id/button3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="34dp"
         android:onClick="zamienemail"
         android:text="@string/button_zmien" />

</LinearLayout>